<resources>
    <string name="app_name">NonSDKAPI</string>

    <string name="operator_name_data_sub">Operator Name(data sub)</string>
    <string name="operator_name">operator name</string>
    <string name="get_ims_reg_sta">IMS register stats</string>
    <string name="reset">Reset</string>
    <string name="get_call_sta">get call state</string>
    <string name="is_package_accessible">is package accessible</string>
</resources>
